--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ header h1{
 
 
 
-/* ----------h2,Paragraph,Button in <article>---------- */
+/* ----------article---------- */
 
 
 
@@ -84,6 +84,9 @@ header article p{
     margin-bottom: 15px;
 
 }
+
+
+/* ----------nav---------- */
 
 .buttonHeader{
     display: block;
