--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,9 +47,11 @@
 
 header{
     background: url(../img/Lev3_2_css-einführung_box-model_img.jpg);
-    background-size: cover;
+    background-size:100%;
     padding-top: 10px;
-    padding-bottom: 66px;
+    height: 800px;
+    
+    
     
 }
 
@@ -73,7 +75,7 @@ header article{
     width: 250px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 300px;
+    margin-top: 200px;
 }
 
 header article h2{
@@ -86,7 +88,7 @@ header article p{
 }
 
 
-/* ----------nav---------- */
+
 
 .buttonHeader{
     display: block;
@@ -106,15 +108,29 @@ header article a:hover{
 }
 
 
+
+/* ----------nav---------- */
+
+
+
+header nav{
+    position:absolute;
+    right:50px;
+    top: 350px;
+    
+}
+
 .unsortedListHeader{
     margin-top: 200px;
     margin-right: 150px;
     text-align: end;
     line-height: 40px;
+    list-style: none;
 }
 
 header nav ul li a{
     text-decoration: none;
+    
 }
 
 header nav ul a:hover{
@@ -180,7 +196,7 @@ main article div h5{
 
 footer{
     background-color:#1c2336;
-    padding-bottom: 20px;
+    padding-bottom: 25px;
     padding-top: 15px;
 }
 
